--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "modernizr": "~2.6.2",
     "jquery": "~1.10.2",
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {}
 }
