--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "modernizr": "~2.6.2",
     "jquery": "~1.10.2",
     "normalize.css": "~3.0.3",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "handlebars": "~3.0.3"
   },
   "devDependencies": {}
 }
