--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,10 @@
   "name": "weddingsite",
   "private": true,
   "dependencies": {
-    "modernizr": "~2.6.2",
     "jquery": "~1.10.2",
-    "normalize.css": "~3.0.3"
+    "modernizr": "~2.6.2",
+    "normalize.css": "~3.0.3",
+    "slick-carousel": "~1.5.8"
   },
   "devDependencies": {}
 }
